# RubicsRecognition

./: .gitignore  CMakeLists.txt  README.md  build.sh
gui/: CMakeLists.txt  display.cpp  display.hpp
recognition/: CMakeLists.txt
recognition/classifier/: CMakeLists.txt  classifer.hpp  classifier.cpp  classifier.hpp
recognition/detector/: CMakeLists.txt  detector.cpp  detector.hpp
recognition/include/: CMakeLists.txt  recognition.cpp  recognition.hpp
recognition/preprocessor/: CMakeLists.txt  preprocessor.cpp  preprocessor.hpp
recognition/src/: CMakeLists.txt  main.cpp
recognition/utils/: CMakeLists.txt  circut.cpp  circut.hpp
src/: CMakeLists.txt  main.cpp
